# document-analyzer

./: README.md  pyproject.toml  requirements-dev.txt
document_analyzer/: __init__.py  cli.py  startup.py
document_analyzer/analyzers/: __init__.py  cedula_analyzer.py  document_analyzer.py  passport_analyzer.py
document_analyzer/config/: __init__.py  constants.py  logger.py
document_analyzer/services/: __init__.py  paddleocr_service.py
document_analyzer/utils/: __init__.py  cedula_utils.py  common_utils.py  extract_cedula_signature.py  passport_language_detector.py  passport_utils.py
