[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "document-analyzer"
version = "0.1.1"
description = "A Python package for extracting information from Panamanian identity document (Cédula) and Passports"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"

authors = [
    { name = "Usman Ghani" }
]

keywords = ["ocr", "document", "cedula", "passport", "panama", "paddleocr", "mrz"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Natural Language :: English",
    "Natural Language :: Spanish",
]

dependencies = [
    "paddleocr==3.2.0"
]

[project.scripts]
document-analyzer = "document_analyzer.cli:main"

[project.urls]
Homepage = "https://github.com/usman-369/document-analyzer"
Repository = "https://github.com/usman-369/document-analyzer"
Issues = "https://github.com/usman-369/document-analyzer/issues"